merge some parts regarding QoS of github.com/net-neutrality-tools/nntool